# pydna

./: .blackignore  .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE.txt  Makefile  README.html  README.md  SPNCRNA.781.gb  architecture_review.md  dummy.py  dummy2.py  dummy3.py  dummy4.py  example.json  example.py  example_gallery.html  future_release_names.html  genindex.html  getting_started.html  history.ipynb  how_pydna_works.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  refactor_roadmap.md  repair_template.json  requirements.txt  run_dummy.sh  run_test.py  (+2 more)
.doctrees/: CHANGELOG.doctree  environment.pickle  example_gallery.doctree  getting_started.doctree  how_pydna_works.doctree  index.doctree  installation.doctree
.doctrees/__intersphinx_cache__/: biopython_objects.inv  python_objects.inv
.doctrees/notebooks/: CRISPR.doctree  Dseq.doctree  Dseq_Features.doctree  Example_CRISPR.doctree  Example_Gibson.doctree  Example_Restriction.doctree  Example_primer_screen.doctree  Gibson.doctree  Importing_Seqs.doctree  PCR.doctree  Restrict_Ligate_Cloning.doctree  history.doctree  (+4 more)
_modules/: collections.html  index.html  pydna.html
_sources/: example_gallery.md.txt  example_gallery.rst  getting_started.rst  index.rst
_static/: custom.css  documentation_options.js
docs/: .gitignore  CHANGELOG.md  README.md  build_docs.sh  conf.py  example_gallery.md  example_gallery.rst  future_release_names.md  getting_started.md  getting_started.rst  how_pydna_works.rst  index.rst  pydna_cheat_sheet.odt  pydna_session.py
markdown_notebooks/: CRISPR.html  Dseq.html  Dseq_Features.html  Example_CRISPR.html  Example_Gibson.html  Example_HT_cazyme_primer_design.html  Example_Restriction.html  Example_designing_primers_for_kozak_library.html  Gibson.html  Importing_Seqs.html  PCR.html  Restrict_Ligate_Cloning.html  hackathon_copenhagen_2025.html  new_assemblies.html  primer_design.html  readme_example.html
modules/: index.html  pydna.html  pydna__pretty.html  pydna__thermodynamic_data.html  pydna_all.html  pydna_amplicon.html  pydna_amplify.html  pydna_assembly.html  pydna_assembly2.html  pydna_codon.html  pydna_common_sub_strings.html  pydna_conftest.html  pydna_contig.html  pydna_cre_lox.html  pydna_crispr.html  pydna_design.html  pydna_download.html  pydna_dseq.html  pydna_dseqrecord.html  pydna_editor.html  pydna_fakeseq.html  pydna_fusionpcr.html  pydna_gateway.html  pydna_gel.html  pydna_genbank.html  pydna_genbankfile.html  pydna_genbankfixer.html  pydna_genbankrecord.html  pydna_goldengate.html  pydna_ladders.html  pydna_ligate.html  pydna_myenzymes.html  pydna_myprimers.html  pydna_parsers.html  pydna_primer.html  pydna_readers.html  pydna_seq.html  pydna_seqrecord.html  pydna_sequence_picker.html  pydna_sequence_regex.html  (+5 more)
notebooks/: CRISPR.html  Dseq.html  Dseq_Features.html  Example_CRISPR.html  Example_Gibson.html  Example_Restriction.html  Example_primer_screen.html  Gibson.html  Importing_Seqs.html  PCR.html  Restrict_Ligate_Cloning.html  hackathon_copenhagen_2025.html  history.html  new_assemblies.html  primer_design.html  readme_example.html
reference/: modules.html  pydna.html
scripts/: Deqrecord.ipynb  SeqRecord.ipynb  angularjs_notebook.ipynb  assembly_figures.txt  bandwagon__.ipynb  cai_test.ipynb  check_my_primers.py  cutsite_pairs.ipynb  deps.js  finding_seqs_over_origin.ipynb  gb_comment_parsing.ipynb  gel_example.ipynb  gel_example_invisible_bands.ipynb  gel_inline_ex.ipynb  guess_alphabet.py  importing_nb_as_module.ipynb  input_template.ng  js.ipynb  jupyter_note_book.ipynb  persistent cache decorator.py  remove_local_and_remote_alpha_git_tags.sh  spyder_start.py  temp (copy).py  temp.py  test_primer_id.py  tqdm_progress_bar.ipynb
tests/: X60065_antisense_stop10.gb  X60065_start1100.gb  YEplac195_snapgene.gb  YIplac204_snapgene.gb  all_cre_lox.gb  atm.automaton  conftest.py  example.ipynb  fas2__KanMX4_locus.gb  fas2__NatMX4_locus.gb  format_sequences.ipynb  jupyter_test_repr.ipynb  pBR322.gb  pIL68.gb  pIL75.gb  pYPK0_TDH3_GAL2_PGI1.gb  pYPK7_TDH3_GAL2_PGI1.gb  pYPKa.gb  pYPKp7.gb  pYPKpw.gb  processor.py  save_changed_seq.ipynb  save_changed_seq.nbconvert.ipynb  sequence-OST4-Genbank.gp  test_USERcloning.py  test_adding_Dseq_Dseqrecord.py  test_assembly2.py  test_dbik.py  test_extra_cut_features.py  test_extra_markbudde.py  test_extra_santirdnd_bug_spanning_features.py  test_longerlocus_name_gives_dseq.py  test_module___init__.py  test_module__pretty.py  test_module__thermodynamic_data.py  test_module_all.py  test_module_alphabet.py  test_module_amplicon.py  test_module_amplify.py  test_module_assembly.py  (+39 more)
(+284 files in other folders)
