[project]
name = "pydna"
description = "Representing double stranded DNA and functions for simulating cloning and homologous recombination between DNA molecules."
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE.txt"]
requires-python = ">=3.10,<4.0"
dynamic = ["version"]
authors = [
  { name = "Björn F. Johansson", email = "bjornjobb@gmail.com" },
  { name = "Manuel Lera-Ramirez", email = "manulera14@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Education",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Education",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "appdirs>=1.4.4",
  "biopython>=1.87,<2.0",
  "networkx>=2.8.8",
  "numpy>1.26; python_version < '3.12'",
  "numpy>=2.3.0; python_version >= '3.12'",
  "prettytable>=3.5.0",
  "pydivsufsort>=0.0.20,<0.0.21",
  "pyfiglet>=0.8.post1",
  "seguid>=0.0.5",
  "regex>=2024.11.6,<2027.0.0",
  "opencloning-linkml>=1,<2",
  "sgffp>=0.18.0",
]

[project.optional-dependencies]
clipboard = ["pyperclip>=1.8.2"]
download = ["pyparsing>=2.4.7", "requests>=2.26.0"]
express = ["cai2>=1.0.5"]
gel = [
  "scipy>=1.9.3; python_version < '3.12'",
  "scipy>=1.11.3; python_version >= '3.12'",
  "matplotlib>=3.4.3",
  "pillow>=8.4.0",
]
primer_screen = ["pyahocorasick>=2.2.0"]

[project.urls]
Homepage = "https://github.com/pydna-group/pydna#-pydna"
Documentation = "https://pydna-group.github.io/pydna"
Repository = "https://github.com/pydna-group/pydna"
Changelog = "https://github.com/pydna-group/pydna/blob/master/docs/CHANGELOG.md#changelog"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/pydna"]

[tool.hatch.build.targets.sdist]
include = ["src/pydna", "README.md", "LICENSE.txt"]

[dependency-groups]
test = [
  "coverage>=7.1.0",
  "nbval>=0.9.6",
  "pytest>=7.2.0",
  "pytest-cov>=4.0.0",
  "pytest-doctestplus>=0.12.1",
  "pytest-profiling>=1.7.0",
  "requests-mock>=1.10.0",
]
docs = [
  "numpydoc>=1.6.0,<2.0",
  "sphinx",
  "myst-nb",
  "sphinx-book-theme",
  "pandas",
]
dev = [
  "ruff>=0.14",
  "pre-commit>3.6",
  "nbstripout>=0.9,<0.10",
]

[tool.pytest.ini_options]
minversion = "6.0.2"
python_files = "test_*.py"
testpaths = ["tests", "src/pydna"]
norecursedirs = ["*"]
markers = [
    "mpl_image_compare",
]
filterwarnings = [
    'ignore:Partial overlaps can return wrong products.*:UserWarning',
    'ignore:Some recombination products were discarded because they had off-target cuts.*:UserWarning',
    'ignore:The user_assembly_design function is experimental and may change in future versions.*:FutureWarning',
    'ignore:Increasing length of locus line to allow long name.*:',
    'ignore:Feature qualifier key.*:Bio.BiopythonWarning',
    'ignore:Truncated LOCUS line found - is this correct\?.*:Bio.BiopythonWarning',
    'ignore:LOCUS line is wrongly formatted, we used a more permissive parser.*:UserWarning',
    'ignore:The primer_screen module is experimental.*:FutureWarning',
    'ignore:pydna.legacy.assembly is deprecated.*',
    'ignore:pydna.assembly2 was renamed to pydna.assembly.*',
    'ignore:invalid escape sequence.*:SyntaxWarning:tests/test_module_assembly2.py',
]

[tool.coverage.run]
branch = true
source = ["pydna"]
omit = [
    "*/tests/*",
    "*/_version.py",
    "src/pydna/threading_timer_decorator_exit.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__==.__main__.:",
    "if __name__ ==.__main__.:",
    "if __name__== .__main__.:",
    "if __name__ == .__main__.:",
]
ignore_errors = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "B", "C90"]
# E203/E266/E501 are handled by the formatter. The B0xx rules below are style
# choices the pre-ruff flake8 config did not enforce and are not real bugs here.
ignore = [
    "E203", "E266", "E501", "E741", "F403",
    "B905", "B007", "B008", "B904",
]

[tool.ruff.lint.per-file-ignores]
# Tests intentionally use bare expressions/attribute access to exercise repr,
# compare types, and import for availability checks.
"tests/**" = ["B015", "B018", "E721", "F401"]

[tool.ruff.lint.mccabe]
max-complexity = 18
